networking/nginx/ingress-nginx/cache-engine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-cloudfront-net
spec:
  externalName: jdkasl12k3l.cloudfront.net
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  sessionAffinity: None
  type: ExternalName
